Initial Hedera-Fireblock added application.properties